Fixed sizing issues on mobile; added updated copy of resume

--- a/css/narrow.css
+++ b/css/narrow.css
@@ -1,16 +1,19 @@
 .outside {
     margin-top: 10%;
-    /*background-color: green;*/
 }
 
 .inside-right {
-    /*padding: 40px;*/
     padding: 10px 40px;
 }
 
+
+.inside-left {
+    border-right-width: 0px;
+}
+
 img {
-    width: 40%;
-    height: 40%;
+    width: 50%;
+    height: 50%;
     padding: 20px;
     display: block;
     margin: auto;
